Change to load the admin password and flag from environment variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - ./tomcat/app:/usr/local/tomcat/webapps/ROOT
     environment:
       - CATALINA_OPTS=-Dorg.apache.catalina.STRICT_SERVLET_COMPLIANCE=false 
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+      - FLAG=${FLAG}
     networks:
       - internal 
 
@@ -28,7 +30,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - ADMIN_PASSWORD=password
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
       - GUNICORN_CMD_ARGS=--workers=1 --timeout=120
     deploy:
       resources:
